--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id='terminal-container'></div>
-	<noscript>You are extra cool because whatever you are viewing this on does not support javascript! Click <a href='nojs.html'>here</a> to go to the pure HTML site suitable for terminals.</noscript>
+	<noscript>If you are reading this you may be visiting the site from a terminal connected to a DEC PDP-8. That or your browser does not support javascript and you will likley benefit from the pure HTML version of this site suitable for terminals <a href='nojs.html'>here</a>!</noscript>
 	<script src="/base.js"></script>
 	<script>
 		var audioOn=true;
@@ -497,13 +497,11 @@
 						setTimeout(function() {
 							write('.\n',0,true);
 							setTimeout(function() {
-								write('Opening GUI.\n',0,true);
-								setTimeout(function() {
-									writeTerminalCursor();
-									runningCommand=false;
-									setCookie('page','gui',100);
-									window.location.href='gui.html';
-								},1000);
+								write('Segmentation fault (core dumped)\n',0,true);
+								writeTerminalCursor();
+								runningCommand=false;
+								setCookie('page','gui',100);
+								window.location.href='gui.html';
 							},1000);
 						},1000);
 					},1000);
@@ -693,10 +691,19 @@
 						setTimeout(function(){
 							//write('\nWelcome!\nLast login: Mon Mar 22 1965 on tty\n\n',0,true); Release date of the PDP-8 computer!
 							write('\nWelcome!\nLast login: Thu Jan 1 1970 00:00:00 on tty\n\n',0,true);
-							writeTerminalCursor();
-							setTimeout(function() {
-								runningCommand=false;
-								lsHome();
+							write('[',0,true);
+							write('futureClient@Web_Portfolio ',0,true);
+							write('~/',0,true);
+							write(']$',0,true);
+							setTimeout(function(){
+								write('cd "Blake Karbon"\n',0,false);
+								setTimeout(function(){
+									writeTerminalCursor();
+									setTimeout(function() {
+										runningCommand=false;
+										lsHome();
+									},600);
+								},18*typeRate);
 							},600);
 						},13*typeRate);
 					},13*typeRate);
@@ -704,33 +711,39 @@
 			}
 		}
 		var sc=false;
-		/*window.addEventListener('wheel', function(event) {
+		function scrollUp() {
+			if(!sc) {
+				sc=true;
+				if(scroll<(terminalBuffer.length-rows)) {
+					scroll+=1;
+				}
+				render();
+				setTimeout(function() {
+					sc=false;
+				},10);
+			}
+		}
+		function scrollDown() {
+			if(!sc) {
+				sc=true;
+				if(scroll!=0) {
+					scroll+=-1;
+				}
+				render();
+				setTimeout(function() {
+					sc=false;
+				},10);
+			}
+		}
+		window.addEventListener('wheel', function(event) {
 			if(!runningCommand && !writingString && !writingChar) {
 				if(event.deltaY>0){
-					if(!sc) {
-						sc=true;
-						if(scroll!=0) {
-							scroll+=-1;
-						}
-						render();
-						setTimeout(function() {
-							sc=false;
-						},10);
-					}
+					scrollDown();
 				} else if(event.deltaY<0) {
-					if(!sc) {
-						sc=true;
-						if(scroll<(terminalBuffer.length-rows)) {
-							scroll+=1;
-						}
-						render();
-						setTimeout(function() {
-							sc=false;
-						},10);
-					}
+					scrollUp();
 				}
 			}
-		});*/
+		});
 		function start() {
 			login();
 		}
@@ -745,10 +758,10 @@
 			terminalContext.font=fontSize+'px localUnifont';
 			terminalContext.fillStyle = 'rgb(0,40,0)';
 			initTerminalLines();
-			floppyLight.setAttribute('x',90);
-			floppyLight.setAttribute('y',560);
-			floppyLight.setAttribute('width',20);
-			floppyLight.setAttribute('height',10);
+			floppyLight.setAttribute('x',665);
+			floppyLight.setAttribute('y',370);
+			floppyLight.setAttribute('width',10);
+			floppyLight.setAttribute('height',20);
 			floppyLight.setAttribute('style','fill:rgb(255,0,0);');
 			floppyLight.setAttribute('visibility','hidden');
 			document.getElementById('terminal').appendChild(floppyLight);
@@ -777,6 +790,7 @@
 			});
 			document.getElementById('terminal-container').appendChild(chord);
 			setTerminalColor(getCookie('terminalColor'));
+			adjustScale();
 			if(local_unifont!=null) {
 				local_unifont.load().then(function(loaded_face) {
 					document.fonts.add(loaded_face);
@@ -797,7 +811,7 @@
 			background-color: #dddddd;
 		}
 		#terminal-container {
-			position: absolute;
+			position: fixed;
 		}
 	</style>
 </body>
