Testing mobile development!

--- a/gui.html
+++ b/gui.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <noscript>If you are reading this you may be visiting the site from a terminal connected to a DEC PDP-8. That or your browser does not support javascript and you will likley benefit from the pure HTML version of this site suitable for terminals <a href='nojs.html'>here</a>!</noscript>
-	<div>Some test text.</div>
+	<div>Some new test text.</div>
 	<script src="/base.js"></script>
 	<script>
 	if(getCookie('page')=='term') {
