--- a/nojs.html
+++ b/nojs.html
@@ -5,6 +5,6 @@
 	<link rel="icon" href="res/img/favicon.png" sizes="128x128" type="image/png">
 </head>
 <body>
-	<noscript>This better be showing up!</noscript>
+	<noscript>This page is still a work in progress! My apologies.</noscript>
 </body>
 </html>
