Added arrow key scrolling, and developed a tutorial for new users!

--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 			 window.open("https://github.com/BalakeKarbon/");
 		},function() {
 			 window.open("https://www.linkedin.com/in/blake-karbon/");
-		},popupBlocked,changeColor,cc0,cc1,cc2,cookieYes,cookieNo,interests,dodgeImage1];
+		},popupBlocked,changeColor,cc0,cc1,cc2,cookieYes,cookieNo,interests,dodgeImage1,function() {
+			tapKey();
+			playFloppyAudio(5);
+		},checkScroll,tutorialCheck];
 		var terminalBuffer=[];
 		var typeRate=50;
 		var desk=document.createElement('div');
@@ -156,11 +159,7 @@
 		}
 		terminalContext.fillStyle = 'rgb('+rrgb[0]+','+rrgb[1]+','+rrgb[2]+')';
 		terminalContext.fillRect(0, 0, terminalCanvas.width, terminalCanvas.height);
-		var depleteInterval = setInterval(function() {
-			if(!writingString) {
-				deplete();
-			}
-		},depletionInterval);
+		var depleteInterval = setInterval(deplete,depletionInterval);
 		if(!canvasRender) {
 			clearInterval(depleteInterval);
 		}
@@ -218,9 +217,9 @@
 		var regularColor='#00ff00';
 		var linkColor='#00aa00';
 		function render() {
-			if(canvasRender) {
+			/*if(canvasRender) {
 				deplete();
-			}
+			}*/
 			if(terminalBuffer.length<=rows) {
 				scroll=0;
 			}
@@ -388,6 +387,24 @@
 				}
 			}
 		}
+		function tapKey() {
+			if(audioOn) {
+				try {
+					var audioPromise=keyAudio[keyAudioPath[keyAudioLoop]].play();
+					if (audioPromise !== null){
+						audioPromise.catch(() => { keyAudio[keyAudioPath[keyAudioLoop]].play(); });
+					}
+				} catch(error) {
+					console.log(error);
+				}
+				keyAudioLoop++;
+				if(keyAudioLoop>=keyAudioPath.length) {
+					keyAudioLoop=0;
+					keyAudioPath=shuffle(keyAudioPath);
+				}
+			}
+			return keyAudioPath[keyAudioLoop];
+		}
 		function write(tString,link,quick) {
 			if(writingString==false) {
 				writingString=true;
@@ -427,21 +444,7 @@
 						} else {
 							setTimeout(function() {
 								writeCallback();
-								if(audioOn) {
-									try {
-										var audioPromise=keyAudio[keyAudioPath[keyAudioLoop]].play();
-										if (audioPromise !== null){
-											audioPromise.catch(() => { keyAudio[keyAudioPath[keyAudioLoop]].play(); });
-										}
-									} catch(error) {
-										console.log(error);
-									}
-									keyAudioLoop++;
-									if(keyAudioLoop>=keyAudioPath.length) {
-										keyAudioLoop=0;
-										keyAudioPath=shuffle(keyAudioPath);
-									}
-								}
+								tapKey();
 								render();
 							},cc*typeRate);
 							cc++;
@@ -454,14 +457,18 @@
 			}
 		}
 		var runningCommand=false;
-		function writeTerminalCursor() {
+		function writeTerminalCursor(linked) {
 			write('[',0,true);
 			write('futureClient@Web_Portfolio ',0,true);
-			write('~/Blake Karbon',1,true);
+			if(linked) {
+				write('~/Blake Karbon',1,true);
+			} else {
+				write('~/Blake Karbon',0,true);
+			}
 			write(']$',0,true);
 		}
-		function commandReturn(path) {
-			loadFile(path, null, function(fileData) {
+		function commandReturn(path,callback) {
+			loadFile(path, callback, function(fileData,callback) {
 				//write(fileData.responseText+'\n',0,true);
 				var textSections=[];
 				var section=0;
@@ -498,9 +505,13 @@
 				for(var s=0;s<textSections.length;s++) {
 					write(textSections[s][0],textSections[s][1],true);
 				}
-				write('\n',0,true);
-				writeTerminalCursor();
-				runningCommand=false;
+				if(callback==null) {
+					write('\n',0,true);
+					writeTerminalCursor(true);
+					runningCommand=false;
+				} else {
+					callback();
+				}
 			});
 		}
 		function genericCommand(command,returnPage,audio) {
@@ -510,7 +521,7 @@
 				write(command+'\n',0,false);
 				setTimeout(function () {
 					playFloppyAudio(audio);
-					commandReturn(returnPage);
+					commandReturn(returnPage,null);
 				},(command.length+1)*typeRate);
 			}
 		}
@@ -522,7 +533,7 @@
 				setTimeout(function() {
 					playFloppyAudio(4);
 					write('If you are reading this you must enable popups\nfor this page in your browser!\n',0,true);
-					writeTerminalCursor();
+					writeTerminalCursor(true);
 					runningCommand=false;
 				},28*typeRate);
 			}
@@ -538,7 +549,7 @@
 					write('green\n',9,true);
 					write('white\n',10,true);
 					write('orange\n',11,true);
-					writeTerminalCursor();
+					writeTerminalCursor(true);
 					runningCommand=false;
 				},20*typeRate);
 			}
@@ -551,7 +562,7 @@
 				setTimeout(function() {
 					playFloppyAudio(0);
 					setTerminalColor(0);
-					writeTerminalCursor();
+					writeTerminalCursor(true);
 					runningCommand=false;
 				},27*typeRate);
 			}
@@ -564,7 +575,7 @@
 				setTimeout(function() {
 					playFloppyAudio(0);
 					setTerminalColor(1);
-					writeTerminalCursor();
+					writeTerminalCursor(true);
 					runningCommand=false;
 				},27*typeRate);
 			}
@@ -577,7 +588,7 @@
 				setTimeout(function() {
 					playFloppyAudio(0);
 					setTerminalColor(2);
-					writeTerminalCursor();
+					writeTerminalCursor(true);
 					runningCommand=false;
 				},28*typeRate);
 			}
@@ -591,7 +602,7 @@
 					playFloppyAudio(3);
 					loadFile(filePath, null, function(fileData) {
 						write(fileData.responseText+'\n',0,true);
-						writeTerminalCursor();
+						writeTerminalCursor(true);
 						runningCommand=false;
 					});
 				},(fileName.length+5)*typeRate);
@@ -614,13 +625,13 @@
 					if(!newWin || newWin.closed || typeof newWin.closed=='undefined') {
 						write('bash: /dev/tty2: ',0,true);
 						write('Permission denied\n',7,true);
-						writeTerminalCursor();
+						writeTerminalCursor(true);
 						setTimeout(function() {
 							runningCommand=false;
 							popupBlocked();
 						},1000);
 					} else {
-						writeTerminalCursor();
+						writeTerminalCursor(true);
 						runningCommand=false;
 					}
 				},28*typeRate);
@@ -640,13 +651,13 @@
 					if(!newWin || newWin.closed || typeof newWin.closed=='undefined') {
 						write('Error hosting image: ',0,true);
 						write('Permission denied\n',7,true);
-						writeTerminalCursor();
+						writeTerminalCursor(true);
 						setTimeout(function() {
 							runningCommand=false;
 							popupBlocked();
 						},1000);
 					} else {
-						writeTerminalCursor();
+						writeTerminalCursor(true);
 						runningCommand=false;
 					}
 				},30*typeRate);
@@ -659,9 +670,20 @@
 				write('ls\n',0,false);
 				setTimeout(function() {
 					playFloppyAudio(2);
-					commandReturn('res/text/lang/eng/pages/home-page.md');
+					commandReturn('res/text/lang/eng/pages/home-page.md',null);
 				},3*typeRate);
 			}
+		}
+		function cookieAsk() {
+			write('./cookies.py\n',0,false);
+			setTimeout(function() {
+				playFloppyAudio(4);
+				write('This site uses cookies.\nIs that okay? (',0,true);
+				write('yes',12,true);
+				write('/',0,true);
+				write('no',13,true);
+				write('):',0,true);
+			},14*typeRate);
 		}
 		function cookieYes() {
 			terminalLinks[12]=null;
@@ -669,7 +691,7 @@
 			write('yes\n',0,false);
 			setTimeout(function () {
 				write('Cookies enabled!\n',0,true);
-				writeTerminalCursor();
+				writeTerminalCursor(true);
 				playFloppyAudio(5);
 				setTimeout(function() {
 					runningCommand=false;
@@ -685,12 +707,40 @@
 			write('no\n',0,false);
 			setTimeout(function () {
 				write('Cookies disabled.\n',0,true);
-				writeTerminalCursor();
+				writeTerminalCursor(true);
 				setTimeout(function() {
+					allowCookies='no';
 					runningCommand=false;
 					lsHome();
 				},600);
 			},3*typeRate);
+		}
+		function checkScroll() {
+			if(scroll>0) {
+				scroll=0;
+				terminalLinks[17]=null;
+				write('Thank You!\n',0,true);
+				writeTerminalCursor(true);
+				if(allowCookies=='yes' || allowCookies=='no') {
+					runningCommand=false;
+				} else {
+					setTimeout(cookieAsk,600);
+				}
+			} else {
+				write('                       ↑↑\n',0,true);
+			}
+		}
+		function tutorialCheck() {
+			if(!runningCommand) {
+				runningCommand=true;
+				write('./tutorial.bin\n',0,false);
+				setTimeout(function() {
+					terminalLinks[17]=checkScroll;
+					commandReturn('res/text/lang/eng/pages/tutorial-page.md',function() {
+
+					});
+				},15*typeRate);
+			}
 		}
 		function login() {
 			if(!runningCommand) {
@@ -712,18 +762,15 @@
 							setTimeout(function(){
 								write('cd "Blake Karbon"\n',0,false);
 								setTimeout(function(){
-									writeTerminalCursor();
+									writeTerminalCursor(true);
 									setTimeout(function() {
 										if(allowCookies!='yes') {
-											write('./cookies.py\n',0,false);
+											write('./tutorial.bin\n',0,false);
 											setTimeout(function() {
-												playFloppyAudio(4);
-												write('This site uses cookies.\nIs that okay? (',0,true);
-												write('yes',12,true);
-												write('/',0,true);
-												write('no',13,true);
-												write('):',0,true);
-											},14*typeRate);
+												commandReturn('res/text/lang/eng/pages/tutorial-page.md',function() {
+
+												});
+											},15*typeRate);
 										} else {
 											runningCommand=false;
 											lsHome();
@@ -738,36 +785,57 @@
 		}
 		var sc=false;
 		function scrollUp() {
-			if(!sc) {
-				sc=true;
-				if(scroll<(terminalBuffer.length-rows)) {
-					scroll+=1;
+			if(!writingString && !writingChar) {
+				if(!sc) {
+					sc=true;
+					if(scroll<(terminalBuffer.length-rows)) {
+						scroll+=1;
+					}
+					render();
+					setTimeout(function() {
+						sc=false;
+					},10);
 				}
-				render();
-				setTimeout(function() {
-					sc=false;
-				},10);
 			}
 		}
 		function scrollDown() {
-			if(!sc) {
-				sc=true;
-				if(scroll!=0) {
-					scroll+=-1;
+			if(!writingString && !writingChar) {
+				if(!sc) {
+					sc=true;
+					if(scroll!=0) {
+						scroll+=-1;
+					}
+					render();
+					setTimeout(function() {
+						sc=false;
+					},10);
 				}
-				render();
-				setTimeout(function() {
-					sc=false;
-				},10);
 			}
 		}
-		window.addEventListener('wheel', function(event) {
-			if(!runningCommand && !writingString && !writingChar) {
-				if(event.deltaY>0){
-					scrollDown();
-				} else if(event.deltaY<0) {
-					scrollUp();
+		window.addEventListener('keydown', function(event) {
+			if(touchInterval==null) {
+				var tc=document.getElementById('terminal-container');
+				if(event.keyCode==38) {
+					touchInterval=setInterval(scrollUp,20);
+					scd=-1;
+				} else if(event.keyCode==40) {
+					touchInterval=setInterval(scrollDown,20);
+					scd=1;
 				}
+			}
+		});
+		window.addEventListener('keyup', function(event) {
+			if(touchInterval!=null) {
+				clearInterval(touchInterval);
+				touchInterval=null;
+				scd=0;
+			}
+		});
+		window.addEventListener('wheel', function(event) {
+			if(event.deltaY>0){
+				scrollDown();
+			} else if(event.deltaY<0) {
+				scrollUp();
 			}
 		});
 		var touchInterval=null;
